2000-01-23  Lauris Kaplinski <lauris@ariman.ee>

    * helper/art*: functions for rendering into RGBA buffer
    * file.*, sp-shape.*, sp-image.*: exporting png bitmaps

2000-01-23  Lauris Kaplinski <lauris@ariman.ee>

    * Uses SPCurve everywhere

2000-01-19  Lauris Kaplinski <lauris@ariman.ee>

    * src/helper/sodipodi-ctrl.*: removed aa rendering

2000-01-18 David Metcalfe (crdjm@sgi.com)

    * Added command line options:
     . [ -f ] file  to load file at startup
     . -p file      to print the file without the GUI starting
     . -t file      to send the print output to the named file
    * -t is currently required for -p as I couldn't find a way of creating
        a GnomePrinter that goes to the default printer. ??
    * Printing doesn't require that X be started

2000-01-16  Lauris Kaplinski <lauris@ariman.ee>

    * Bumped version to 0.17
    * Most things, that worked in 0.15 work again
    * still looses selections, dialogs suck etc.

2000-01-14  Lauris Kaplinski <lauris@ariman.ee>

    * Now uses Gnome MDI
    * Stroke & fill dialogs almost work for multiple displays

2000-01-08  Lauris Kaplinski <lauris@ariman.ee>

    * Major rewrite of object system
    * Multiple views almost work
    * Multiple documents almost work
    * Rects, Ellipses, Drawing and Nodes almost work
    * Nothing else works ;-(
    
1999-12-30  Lauris Kaplinski <lauris@ariman.ee>

    * Bumped version number to 0.15
    * Node editing works enough to be usable
    * Images use relative paths, if possible
    * Text can show accented chars
    
1999-12-25  Lauris Kaplinski <lauris@ariman.ee>

    * Increased version number to 0.14
    * Preliminary node editing mode
    * Stacking order can be changed again
    * Convert to Curves, Combine & Separate functions
    * Corrected repr refcounting - much fewer segfaults now
    * Countless bugfixes here & there
    
1999-12-23  Lauris Kaplinski <lauris@ariman.ee>

    * Major cleanup - most things work better now, but some