@@ -7,10 +7,8 @@
 #include <libart_lgpl/art_pixbuf.h>
 #include <libart_lgpl/art_rgb_pixbuf_affine.h>
 #include <libart_lgpl/art_vpath.h>
-#include <libart_lgpl/art_svp.h>
-#include <libart_lgpl/art_svp_vpath.h>
-#include <libart_lgpl/art_svp_wind.h>
-#include <libart_lgpl/art_svp_point.h>
+#include <libart_lgpl/art_uta.h>
+#include <libart_lgpl/art_uta_vpath.h>
 #include <gnome.h>
 
 #include "canvas-image.h"
@@ -76,7 +74,7 @@ static void
 sp_canvas_image_init (SPCanvasImage * canvas_image)
 {
 	canvas_image->pixbuf = NULL;
-	canvas_image->svp = NULL;
+	canvas_image->vpath = NULL;
 }
 
 static void
@@ -86,11 +84,7 @@ sp_canvas_image_destroy (GtkObject *object)
 
 	canvas_image = (SPCanvasImage *) object;
 
-#if 0
-	/* We should not free pixbuf here ;-) */
-	if (canvas_image->pixbuf) art_pixbuf_free (canvas_image->pixbuf);
-#endif
-	if (canvas_image->svp) art_svp_free (canvas_image->svp);
+	if (canvas_image->vpath) art_free (canvas_image->vpath);
 
 	if (GTK_OBJECT_CLASS (parent_class)->destroy)
 		(* GTK_OBJECT_CLASS (parent_class)->destroy) (object);
@@ -100,8 +94,9 @@ static void
 sp_canvas_image_update (GnomeCanvasItem *item, double *affine, ArtSVP *clip_path, int flags)
 {
 	SPCanvasImage *canvas_image;
-	ArtVpath vpath[6];
-	ArtVpath * avpath;
+	ArtVpath vp[6], * vpath;
+	ArtUta * uta;
+	ArtDRect bbox;
 	gint i;
 
 	canvas_image = SP_CANVAS_IMAGE (item);
@@ -111,31 +106,45 @@ sp_canvas_image_update (GnomeCanvasItem *item, double *affine, ArtSVP *clip_path
 
 	for (i = 0; i < 6; i++) canvas_image->affine[i] = affine[i];
 
-	if (canvas_image->pixbuf == NULL)
-		return;
+	if (canvas_image->vpath) {
+		uta = art_uta_from_vpath (canvas_image->vpath);
+		gnome_canvas_request_redraw_uta (item->canvas, uta);
+		art_free (canvas_image->vpath);
+		canvas_image->vpath = NULL;
+	}
 
-	vpath[0].code = ART_MOVETO;
-	vpath[0].x = 0.0;
-	vpath[0].y = 0.0;
-	vpath[1].code = ART_LINETO;
-	vpath[1].x = 0.0;
-	vpath[1].y = canvas_image->pixbuf->height;
-	vpath[2].code = ART_LINETO;
-	vpath[2].x = canvas_image->pixbuf->width;
-	vpath[2].y = canvas_image->pixbuf->height;
-	vpath[3].code = ART_LINETO;
-	vpath[3].x = canvas_image->pixbuf->width;
-	vpath[3].y = 0.0;
-	vpath[4].code = ART_LINETO;
-	vpath[4].x = 0.0;
-	vpath[4].y = 0.0;
-	vpath[5].code = ART_END;
-	vpath[5].x = 0.0;
-	vpath[5].y = 0.0;
+	if (canvas_image->pixbuf == NULL) return;
 
-	avpath = art_vpath_affine_transform (vpath, affine);
-	gnome_canvas_item_update_svp_clip (item, &canvas_image->svp, art_svp_from_vpath (avpath), clip_path);
-	art_free (avpath);
+	vp[0].code = ART_MOVETO;
+	vp[0].x = 0.0;
+	vp[0].y = 0.0;
+	vp[1].code = ART_LINETO;
+	vp[1].x = 0.0;
+	vp[1].y = canvas_image->pixbuf->height;
+	vp[2].code = ART_LINETO;
+	vp[2].x = canvas_image->pixbuf->width;
+	vp[2].y = canvas_image->pixbuf->height;
+	vp[3].code = ART_LINETO;
+	vp[3].x = canvas_image->pixbuf->width;
+	vp[3].y = 0.0;
+	vp[4].code = ART_LINETO;
+	vp[4].x = 0.0;
+	vp[4].y = 0.0;
+	vp[5].code = ART_END;
+	vp[5].x = 0.0;
+	vp[5].y = 0.0;
+
+	vpath = art_vpath_affine_transform (vp, affine);
+	canvas_image->vpath = vpath;
+
+	uta = art_uta_from_vpath (vpath);
+	gnome_canvas_request_redraw_uta (item->canvas, uta);
+
+	art_vpath_bbox_drect (vpath, &bbox);
+	item->x1 = MIN (bbox.x0, bbox.x1);
+	item->y1 = MIN (bbox.y0, bbox.y1);
+	item->x2 = MAX (bbox.x0, bbox.x1);
+	item->y2 = MAX (bbox.y0, bbox.y1);
 }
 
 static double
@@ -143,20 +152,27 @@ sp_canvas_image_point (GnomeCanvasItem *item, double x, double y,
 			  int cx, int cy, GnomeCanvasItem **actual_item)
 {
 	SPCanvasImage *canvas_image;
-	double wind;
+	ArtPixBuf * apb;
+	art_u8 * p;
+	gint ix, iy;
 
 	canvas_image = SP_CANVAS_IMAGE (item);
 
-	if (canvas_image->pixbuf == NULL)
-		return 1e18;
+	if (canvas_image->pixbuf == NULL) return 1e18;
+
+	apb = canvas_image->pixbuf;
+	ix = (gint) x;
+	iy = (gint) y;
+
+	if ((ix < 0) || (iy < 0) || (ix >= apb->width) || (iy >= apb->height)) return 1e18;
+
+	p = apb->pixels + iy * apb->rowstride + ix * 4;
+
+	if (* (p + 3) < 16) return 1e18;
 
 	*actual_item = item;
 
-	wind = art_svp_point_wind (canvas_image->svp, cx, cy);
-
-	if (wind) return 0.0;
-
-	return art_svp_point_dist (canvas_image->svp, cx, cy);
+	return 0.0;
 }
 
 
@@ -167,8 +183,7 @@ sp_canvas_image_render (GnomeCanvasItem *item, GnomeCanvasBuf *buf)
 
 	canvas_image = SP_CANVAS_IMAGE (item);
 
-	if (canvas_image->pixbuf == NULL)
-		return;
+	if (canvas_image->pixbuf == NULL) return;
 
         gnome_canvas_buf_ensure_buf (buf);
 
