@@ -1,3 +1,8 @@
+2000-01-25  Lauris Kaplinski <lauris@ariman.ee>
+
+    * sp-image.c: Cleanups here and there
+    * display/canvas-image.c: point method uses alpha, removed SVP-s
+
 2000-01-23  Lauris Kaplinski <lauris@ariman.ee>
 
     * helper/art*: functions for rendering into RGBA buffer
